---------------------------------------------24 / 10 / 2015----------------------------------------------------
Pulled tzikuri/master changes, apt-get remove --purge <packet>
Added clear way to quit

---------------------------------------------26 / 08 / 2015----------------------------------------------------
The problem of uppercases characters in the installation script has been solved .